Homepage/Download: Small grammar updates for the download builder.

--- a/pages/index.html
+++ b/pages/index.html
@@ -72,7 +72,7 @@
   <article id="download" class="eight columns">
     <h2 class="block">Download builder: Customize for speed</h2>
 
-    <p>We recommend to use our tool that let you build your own custom bundle that contains only the components you need. The builder will generate a custom JavaScript and both a full and structure-only stylesheet for production use.</p>
+    <p>We recommend using our tool to build a custom bundle that contains only the components you need. The builder generates a custom JavaScript file, as well as full and structure-only stylesheets for production use.</p>
 
     <p><a href="http://jquerymobile.com/download-builder/">Download Builder</a></p>
   </article>
