--- a/pages/download.html
+++ b/pages/download.html
@@ -6,7 +6,7 @@
 </script>
 
 <h2 id="download">Download Builder</h2>
-<p>We recommend to use our tool that let you build your own custom bundle that contains only the components you need. The builder will generate a custom JavaScript and both a full and structure-only stylesheet for production use.</p>
+<p>We recommend using our tool to build a custom bundle that contains only the components you need. The builder generates a custom JavaScript file, as well as full and structure-only stylesheets for production use.</p>
 <p><a href="http://jquerymobile.com/download-builder">Download Builder</a></p>
 <hr>
 
